--- a/app/views/mine/albums/edit.html.erb
+++ b/app/views/mine/albums/edit.html.erb
@@ -1,3 +1,7 @@
+<div class="mine albums">
+<%= render "/mine/sub_nav", :action => params[:action] %>
+<div class="clear"></div>
+
 <div id="cu_user_menu" class="clearfix">
   <span class="f14">《 <a href="<%= url_for :action => 'index' %>">返回相册首页</a></span>
 </div>
@@ -18,3 +22,6 @@
   <p class="mb20">相册总容量1G</p>
 </div>
 <div class="clear"></div>
+
+<!-- end mine -->
+</div>
