--- a/app/views/mine/share/_user_followings.html.erb
+++ b/app/views/mine/share/_user_followings.html.erb
@@ -3,7 +3,7 @@
     <div class="pic">
       <%= link_to (image_tag friendship.user.avatar, :width => 50, :height => 50, :align => "left" ), :controller => "items", :action => "edit", :id => @item %>
     </div>
-    <h4> 铃木食堂 </h4>
+    <h4> <%= friendship.user.username %> </h4>
 
     <p><%= link_to_button "cancle_follow", "/mine/unfollow?user_id="+friendship.user_id.to_s %> </p>
     <% if friendship.user.is_following current_user.id %>
