--- a/app/views/mine/wines/new.html.erb
+++ b/app/views/mine/wines/new.html.erb
@@ -1,5 +1,5 @@
 <% content_for :wine_register do %>
-    <%#= javascript_include_tag 'wine_registers' %>
+    <%= javascript_include_tag 'wine_registers_variety' %>
     <%= javascript_include_tag 'region_world' %>
 <% end %>
 <div class="left">
@@ -23,7 +23,7 @@
           <td><%= f.text_field :other_cn_name %> <span class="hint"> 多个名称用逗号隔开.</span></td>
         </tr>
 		<tr>
-			<td></td>
+			<td><%= f.label :region_tree_id %></td>
 			<td><%= render "region_tree" %></td>
 		</tr>
         <tr>
@@ -49,26 +49,25 @@
           <td><%= f.label :drinkable_begin %></td>
           <td>
 		<%= f.date_select :drinkable_begin, :discard_day => true, :discard_month => true, :start_year =>  1990, :end_year => Time.now.year + 150  %>
-		
-		年到 
+
+		年到
 		<%= f.date_select :drinkable_end, :discard_day => true, :discard_month => true, :start_year =>   1990, :end_year => Time.now.year + 150 %>
-		
+
 		年
-		
+
 		</td>
         </tr>
 
         <tr>
           <td><%= f.label :variety_name %></td>
           <td>
-            <%= f.text_field :variety_name_value, data: { autocomplete_source: '/api/wine_varieties/index' }  %>
-            <%= f.label :variety_percentage_value %> <%= f.text_field :variety_percentage_value, :id => 'new_variety' %> <span id="create_variety"><%= t :add %></span> <span class="variety_percentage_error"></span>
+            <%= f.text_field :variety_name_value, :name => "wines_register[variety_name_value][]", data: { autocomplete_source: '/api/wine_varieties/index' }  %>
+            <%= f.label :variety_percentage_value %> <%= f.text_field :variety_percentage_value, :name => "wines_register[variety_percentage_value][]", :id => 'new_variety' %> <span id="create_variety"><%= t :add %></span> <span class="variety_percentage_error"></span>
             <ul id="variety_items">
 
             </ul>
           </td>
         </tr>
-
         <tr>
           <td><%= f.label :capacity %></td>
           <td><%= f.select :capacity, APP_DATA['wines']['capacity'].collect{|i| [i, i]}, {:include_blank => true } %></td>
