--- a/app/views/mine/albums/edit.html.erb
+++ b/app/views/mine/albums/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="mine albums">
+<div class="<%= controller_name  %> albums">
 <%= render "/mine/sub_nav", :action => params[:action] %>
 <div class="clear"></div>
 
