--- a/app/views/mine/index.html.erb
+++ b/app/views/mine/index.html.erb
@@ -1,5 +1,5 @@
-<div class="mine index">
-  <%= render "sub_nav", :action => params[:action] %>
+<div class="<%= controller_name  %> index">
+  <%= render "mine/sub_nav", :action => params[:action] %>
   <div class="clear"></div>
 
   <div class="left">
