--- a/app/views/mine/wine_follows.html.erb
+++ b/app/views/mine/wine_follows.html.erb
@@ -1,5 +1,5 @@
-<div class="mine index wine_follows">
-  <%= render "sub_nav", :action => params[:action] %>
+<div class="<%= controller_name  %> index wine_follows">
+  <%= render "mine/sub_nav", :action => params[:action] %>
   <div class="clear"></div>
 
   <div class="left">
