--- a/app/views/mine/followers.html.erb
+++ b/app/views/mine/followers.html.erb
@@ -4,7 +4,7 @@
 
   <div class="left">
     <div class="box box_1">
-      <h3>粉丝 <span class="font_12">(共 12 人)</span> </h3>
+      <h3>粉丝 <span class="font_12">(共 <%= @followers.total_count %> 人)</span> </h3>
       <%= render "mine/share/user_followers" %>
       <div class="clear"></div>
       <!-- pagination start  -->
@@ -37,7 +37,7 @@
   <div class="right">
     <div class="box box_1  user_follows" >
       <h3>可能感兴趣的人</h3>
-      <%= render "mine/share/user_will_follows" %>
+      <%= render "mine/share/recommend_users" %>
       <div class="clear"></div>
       <%= link_to "添加或邀请好友", "/friends/find", :class => "button block find_friends" %>
       <!-- .box end -->
@@ -50,4 +50,3 @@
 </div>
 
 <div class="clear"></div>
-
