--- a/app/views/mine/share/_user_followers.html.erb
+++ b/app/views/mine/share/_user_followers.html.erb
@@ -1,24 +1,13 @@
-<!-- 如果只是粉丝 -->
-<% (1..2).each do |i| %>
-  <div class="item">
-    <div class="pic">
-      <%= link_to (image_tag "v2/test/u_2.png", :align => "left" ), :controller => "items", :action => "edit", :id => @item %>
-    </div>
-    <h4> 铃木食堂 </h4>
-    <p><%= link_to_button "follow", "/" %> </p>
-    <p> <%= link_to "移除粉丝", :controller => "items" %> </p>
-  </div>
-<% end %>
-
 <!-- 如果是相互关注 -->
-<% (1..11).each do |i| %>
+<% @followers.each do |friendship| %>
   <div class="item">
     <div class="pic">
-      <%= link_to (image_tag "v2/test/u_2.png", :align => "left" ), :controller => "items", :action => "edit", :id => @item %>
+      <%= link_to (image_tag "v2/test/u_2.png", :align => "left" ), :controller => "items", :action => "edit"%>
     </div>
-    <h4> 铃木食堂 </h4>
-    <p> 互相关注 </p>
-    <p> <%= link_to "取消关注", :controller => "items" %> </p>
-
+    <h4> <%= friendship.follower.username %> </h4>
+    <% if current_user.is_following friendship.follower_id %>
+      <p> 互相关注 </p>
+      <p> <%= link_to "取消关注", '/friends/unfollower?user_id='+friendship.follower_id.to_s %> </p>
+    <% end %>
   </div>
 <% end %>
