update template for users
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/assets/stylesheets/v2/mine.css.scss
+++ b/app/assets/stylesheets/v2/mine.css.scss
@@ -259,3 +259,12 @@ $h4_font_size: 14px;
     }
 }
 /* 相册 结束 */
+
+
+/* users */
+.users {
+    a.cancle_follow, a.follow {
+        display: none;
+    }
+
+}
