Update: Style of wine profile.
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/wines/share/_buttons.html.erb
+++ b/app/views/wines/share/_buttons.html.erb
@@ -1,15 +1,16 @@
 <div class="add">
   <ul>
     <li><%= link_to "", { :action => :follow_wine }, :class => "follow_wine compass_buttons-follow_wine"%></li>
-    <li><%= link_to "", { :action => :comment}, :class => "follow_wine compass_buttons-comment"%></li>
-    <li><%= link_to "", { :action => :follow_wine }, :class => "follow_wine compass_buttons-testing_note"%></li>
-    <li><%= link_to "", { :action => :follow_wine }, :class => "follow_wine compass_buttons-add_to_cellar"%></li>
+    <li><%= link_to "", { :action => :comment}, :class => "comment compass_buttons-comment"%></li>
+    <li><%= link_to "", { :action => :follow_wine }, :class => "testint_note compass_buttons-testing_note"%></li>
+    <li><%= link_to "", { :action => :follow_wine }, :class => "add_to_cellar compass_buttons-add_to_cellar"%></li>
   </ul>
   <!-- add end -->
 </div>
 <div class="share">
+ <p>分享到: </p>
   <ul>
-    <li><%= link_to "", { :action => :follow_wine }, :class => "sina compass_buttons-sina"%></li>
+    <li><%= link_to "", { :action => :follow_wine }, :class => "sina compass_icons-sina"%></li>
     <li><%= link_to "", { :action => :comment}, :class => "tencent compass_icons-tencent"%></li>
     <li><%= link_to "", { :action => :follow_wine }, :class => "douban compass_icons-douban"%></li>
     <li><%= link_to "", { :action => :follow_wine }, :class => "kaixin compass_icons-kaixin"%></li>
