--- a/app/views/wines/share/_resource.html.erb
+++ b/app/views/wines/share/_resource.html.erb
@@ -1,10 +1,8 @@
 <% sub_menu = {
-     "wine_follows"     => "wine_follows",
-     "winery_follows"   => "winery_follows",
+     "follows"     => "wine_follows",
+     "owner"   => "winery_follows",
      "comments"  => "comments",
      "testing_notes"  => "testing_notes",
-     "user_follows"     => "user_follows",
-     "user_followers"    => "user_followers",
      "albums"           => "albums" } %>
 
 
