--- a/app/views/wines/show.html.erb
+++ b/app/views/wines/show.html.erb
@@ -4,7 +4,7 @@
      <h2>
        2005 波特米勒站赤霞珠干红葡萄酒
        <br />
-       <span class="font_12">2005 PORTER MILL STATION Cabernet Sauvignon</span>
+       <span>2005 PORTER MILL STATION Cabernet Sauvignon</span>
      </h2>
      <!-- title end -->
     </div>
@@ -70,7 +70,7 @@
 
     <div class="box spec">
       <%= render "wines/share/spec" %>
-    </div>G
+    </div>
     <div class="clear"></div>
 
     <div class="box score">
