--- a/app/views/wines/share/_cover.html.erb
+++ b/app/views/wines/share/_cover.html.erb
@@ -2,10 +2,10 @@
  <%= image_tag "v2/test/w_11.png", :title => "title", :class => "class" %>
 </div>
 
-<div class="thumbs">
-  <%= link_to "", "#", :class => "compass_icons-arrow_left" %>
+<div class="thumbs relative">
+  <%= link_to "", "#", :class => "absolute icon compass_icons-arrow_left" %>
   <% (1..3).each do |i| %>
-    <%= link_to image_tag("v2/test/w_12.png",  :width => "60px", :height => "60px"), "/" %>
+    <%= link_to image_tag("v2/test/w_12.png",  :width => "60px", :height => "60px"), "/", :class => "pic" %>
   <% end %>
-  <%= link_to "", "#", :class => "compass_icons-arrow_right" %>
+  <%= link_to "", "#", :class => "absolute icon compass_icons-arrow_right" %>
 </div>
