--- a/app/views/wines/share/_spec.html.erb
+++ b/app/views/wines/share/_spec.html.erb
@@ -1,34 +1,34 @@
 <p> <%= image_tag "v2/test/label.png", :title => "title", :class => "class" %> </p>
-<table border="0" cellspacing="5" cellpadding="5">
+<table border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td class="l">酒庄</td>
+    <td class="l">酒庄:</td>
     <td class="c">DRC</td>
   </tr>
   <tr>
-    <td class="l">官方网站</td>
+    <td class="l">官方网站:</td>
     <td class="c">http://www.romanee-conti.fr/</td>
   </tr>
   <tr>
-    <td class="l">产区</td>
+    <td class="l">产区:</td>
     <td class="c">
       法国>勃艮第>夜丘>维森-罗曼尼>罗曼尼-康帝（特级田） <br />
       France>Burgundy>Côte de Nuits>Vosne-Romanée>Romanée-Conti (Grand Cru AOC)
     </td>
   </tr>
   <tr>
-    <td class="l">类型：</td>
+    <td class="l">类型: </td>
     <td class="c">红葡萄酒</td>
   </tr>
   <tr>
-    <td class="l">容量</td>
+    <td class="l">容量: </td>
     <td class="c">750ml</td>
   </tr>
   <tr>
-    <td class="l">酒精度：</td>
+    <td class="l">酒精度:</td>
     <td class="c">13％Vol</td>
   </tr>
   <tr>
-    <td class="l">葡萄品种： </td>
+    <td class="l">葡萄品种: </td>
     <td class="c">
       Noir (75%)<br />
       Pinot Noir(25%)
