--- a/app/views/wines/share/_special_comments.html.erb
+++ b/app/views/wines/share/_special_comments.html.erb
@@ -1,4 +1,4 @@
-<table border="0" cellspacing="0" cellpadding="10">
+<table border="0" cellspacing="" cellpadding="3">
   <tr>
     <th>评论家</th>
     <th>得分           </th>
