--- a/app/views/wines/show.html.erb
+++ b/app/views/wines/show.html.erb
@@ -1,3 +1,6 @@
+<div id="comment_form"  style="display: none" >
+
+</div>
 <div class="wine_profile">
   <div class="left">
     <div class="box title">
@@ -9,7 +12,7 @@
      <!-- title end -->
     </div>
 
-    <div class="box buttons">
+    <div class="box buttons relative">
       <%= render "wines/share/buttons" %>
          <!-- buttons end -->
     </div>
