--- a/app/views/wines/share/_buttons.html.erb
+++ b/app/views/wines/share/_buttons.html.erb
@@ -3,10 +3,30 @@
 </div>
 <div class="add">
   <ul>
-    <li><%= link_to "", { :action => "comment" }, :remote => true, :class => "follow_wine compass_buttons-follow_wine ajax"%></li>
-    <li><%= link_to "", { :action => :comment}, :class => "comment compass_buttons-comment ajax"%></li>
-    <li><%= link_to "", { :action => :follow_wine }, :class => "testint_note compass_buttons-testing_note ajax"%></li>
-    <li><%= link_to "", { :action => :follow_wine }, :class => "add_to_cellar compass_buttons-add_to_cellar ajax"%></li>
+    <li>
+      <%  if @wine_detail.is_followed? current_user %>
+      <%= link_to "已关注", { :action => "comment",
+                        :wine_detail_id => params[:wine_detail_id],
+                        :do => "follow"},
+                        :remote => true,
+                        :class => "follow_wine ajax" %>
+        <% else %>
+      <%= link_to "", { :action => "comment",
+                        :wine_detail_id => params[:wine_detail_id],
+                        :do => "follow"},
+                        :remote => true,
+                        :class => "follow_wine compass_buttons-follow_wine ajax" %>
+      <% end %>
+    </li>
+    <li><%= link_to "", { :action => :comment,
+                          :wine_detail_id => params[:wine_detail_id],
+                          :do => "comment"},
+                          :remote => true,
+                          :class => "comment compass_buttons-comment ajax"%></li>
+    <li><%= link_to "", { :action => :follow_wine },
+                          :class => "testint_note compass_buttons-testing_note ajax"%></li>
+    <li><%= link_to "", { :action => :follow_wine },
+                          :class => "add_to_cellar compass_buttons-add_to_cellar ajax"%></li>
   </ul>
   <!-- add end -->
 </div>
