完善上传酒款，增加admin 管理register 功能

--- a/app/assets/stylesheets/v2/wine_register.css.scss
+++ b/app/assets/stylesheets/v2/wine_register.css.scss
@@ -34,6 +34,7 @@ ul.ui-autocomplete{
     border: 1px solid gray;
     overflow:hidden;
     padding:10px;
+    margin-bottom: 10px;
     li{
       float:left;
     }
@@ -60,5 +61,11 @@ ul.ui-autocomplete{
   #success_upload_wine{
     padding:15px;
     background-color:#E9E9E9;
+  }
+}
+.admin_wine_register{
+  form input{
+    padding:3px 10px 3px;
+    width:auto;
   }
 }
