--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -1,6 +1,7 @@
 // Active Admin CSS Styles
 @import "active_admin/mixins";
 @import "active_admin/base";
+@import "v2/wine_register";
 
 // To customize the Active Admin interfaces, add your
 // styles here:
